# postmortem

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: launch.json
.claude/agents/: decision-classifier.md  graph-stitcher.md  rationale-extractor.md
backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
backend/app/: __main__.py  config.py  config_hero.py  errors.py  ingest.py  main.py  mcp_server.py  ratelimit.py  validators.py
backend/app/agents/: cost.py  input_builder.py  json_utils.py  loader.py  pipeline.py  runner.py
backend/app/github/: archaeology.py  client.py  queries.py
backend/app/ledger/: author_slice.py  load.py  models.py  schema.py  store.py
backend/app/managed_agents/: session.py
backend/app/query/: conflicts.py  engine.py  impact.py  interview.py  prompts.py
backend/app/routers/: conflicts.py  impact.py  ingest.py  interview.py  query.py  repos.py
backend/tests/: test_healthz.py  test_interview_engine.py  test_interview_prompt.py  test_interview_router.py  test_interviews_schema.py  test_ledger.py  test_load_author_slice.py  test_thought_events.py
docs/: DAY-1-KICKOFF-PROMPT.md  DEMO-MCP.md  DEMO-SCRIPT.md  DEMO-TTS-SCRIPT.md  DEMO-VOICEOVER.md  MCP-SERVER.md  NEW-SESSION-PROMPT-KEYS.md  SPEC.md  SUBMISSION.md
frontend/: biome.json  package.json  pnpm-lock.yaml  vercel.json
scripts/: capture-demo-fixtures.py  fetch-pr.py  ingest.py  query.py  run-managed-agents-session.py  self-graphify.py  smoke-managed-agents.py  stitch-only.py  synthesize-ingest-fixture.py  verify-agents.py  verify-opus-4-7.py
(+94 files in other folders)
